Fixed Gap; Added Dark Theme

--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body{
-    background-color: #232323;
+    background-color: #232323 !important;
     color: #f3a023 !important;
     padding: 0;
     margin: 0;
@@ -429,7 +429,7 @@ Medium Screens
 ****************/
 @media only screen and (min-width: 40.063em) and (max-width: 64em) { /* min-width 641px and max-width 1024px*/
     body{
-        background-color: #121212;
+        background-color: #232323 !important;
     }
 
     #content p{
@@ -448,7 +448,7 @@ Large Screens
 ****************/
 @media only screen and (min-width: 64.063em) and (max-width: 90em) { /* min-width 1025px and max-width 1440px*/
     body{
-        background-image:url(../img/background.png);
+        background-image:url(../img/background.png) !important;
         background-position: center;
         background-repeat: repeat-x;
         background-attachment: fixed;
@@ -466,7 +466,7 @@ X-Large Screens
 ****************/
 @media only screen and (min-width: 90.063em) and (max-width: 120em) { /* min-width 1441px and max-width 1920px*/
     body{
-        background-image:url(../img/background.png);
+        background-image:url(../img/background.png) !important;
         background-position: center;
         background-repeat: repeat-x;
         background-attachment: fixed;
@@ -484,7 +484,7 @@ HD Screens
 ****************/
 @media only screen and (min-width: 120.063em) { /* min-width 1921px */
     body{
-        background-image:url(../img/background.png);
+        background-image:url(../img/background.png) !important;
         background-position: center;
         background-repeat: repeat-x;
         background-attachment: fixed;
